# serdine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_caches.yml  ci.yml
serdine/: Cargo.toml
serdine/src/: builtin_types.rs  deserialize.rs  deserialize_test.rs  lib.rs  macros.rs  primitive_types.rs  serialize.rs  serialize_test.rs
serdine_derive/: Cargo.toml
serdine_derive/src/: collection.rs  deserialize.rs  lib.rs  serialize.rs  target.rs
serdine_derive/src/fields_data/: field_data.rs  mod.rs  variant_data.rs
serdine_macros/: Cargo.toml
src/: lib.rs
