[package]
name = "serdine_derive"
version = "0.1.0"
authors = ["Saverio Miroddi <saverio.pub2@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"
description = "Derive macros for serdine crate"
homepage = "https://github.com/64kramsystem/serdine"
repository = "https://github.com/64kramsystem/serdine"
license = "MIT"
keywords = ["serialization"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"
